# scittles

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  scrapi-transparency-service-implementation-guide.md
.github/workflows/: docker-ecr.yml
.vcon-repo/: graph.json
docker/: README.md
examples/: README.md  client_example.py
scripts/: migrate_sqlite_to_postgres.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  endpoints.py  models.py
src/core/: __init__.py  merkle.py  receipts.py  verification.py
src/observability/: __init__.py  logging.py  metrics.py  middleware.py  otel.py  prometheus.py
src/storage/: __init__.py  base.py  postgres_store.py  schema.sql  sqlite_store.py
tests/: __init__.py  conftest.py  test_api.py  test_integration.py  test_merkle.py  test_performance.py  test_receipts.py  test_storage.py
